# nightshift

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONCURRENT_EXECUTION_DESIGN.md  CONCURRENT_EXECUTION_SUMMARY.md  ISSUE_26_SUMMARY.md  PR_SUMMARY.md  README.md  README_UPDATE_SUMMARY.md  SANDBOX.md  SLACK_INTEGRATION_CHANGELOG.md  SLACK_NOTIFICATION_IMPROVEMENTS.md  SLACK_QUICK_START.md  SLACK_TESTING_STATUS.md  SLACK_TEST_CHECKLIST.md  TESTING_MCP_OPTIMIZATION.md  TESTING_SLACK_INTEGRATION.md  TOKEN_OPTIMIZATION_PLAN.md  csv_to_json.py  example_task_output.json  palindrome.py  pyproject.toml  setup.py  test_coverage_analysis.md
.github/workflows/: test.yml
docs/: AUTHENTICATION_SETUP.md  gh-cli-sandbox-solution.md  slack-integration-plan.md  step3-integration-tests-plan.md  test-extension-plan.md  testing-strategy-gpt5.md  tui-implementation-plan.md
examples/: directory_map_usage.py  sample_tasks.md
nightshift/: README.md  __init__.py  __main__.py  requirements.txt
nightshift/config/: claude-code-tools-reference.md  directory_map.py  slack_config.example.json
nightshift/core/: agent_manager.py  config.py  file_tracker.py  logger.py  mcp_config_manager.py  notifier.py  output_viewer.py  sandbox.py  task_executor.py  task_planner.py  task_queue.py
nightshift/integrations/: __init__.py  slack_client.py  slack_formatter.py  slack_handler.py  slack_metadata.py  slack_middleware.py  slack_server.py
nightshift/interfaces/: cli.py
nightshift/migrations/: add_allowed_directories.py
tests/: conftest.py  test_mcp_config_manager.py
(+37 files in other folders)
